<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center_vertical"
    android:background="@drawable/score_listitem_background"
    android:paddingHorizontal="15dp"
    android:paddingVertical="10dp"
    android:layout_marginVertical="5dp"
    android:layout_height="wrap_content">

    <com.airbnb.lottie.LottieAnimationView
        android:layout_width="50dp"
        android:layout_height="50dp"
        app:lottie_rawRes="@raw/profile_image"/>

    <TextView
        android:id="@+id/sl_userName"
        android:layout_width="wrap_content"
        android:textColor="@color/black"
        android:layout_height="wrap_content"
        android:fontFamily="@font/chocolate_bar_demo"
        android:textSize="18sp"
        android:layout_centerInParent="true"
        android:text="@string/user_name"/>

    <TextView
        android:id="@+id/sl_lb_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/score"
        android:textColor="@color/black"
        android:layout_alignParentEnd="true"
        android:paddingHorizontal="10dp"
        />

    <TextView
        android:id="@+id/sl_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/chocolate_bar_demo"
        android:text="@string/_100"
        android:textColor="@color/black"
        android:layout_below="@id/sl_lb_score"
        android:layout_alignParentEnd="true"
        android:paddingHorizontal="10dp"
        android:textSize="18sp"/>



</RelativeLayout>