<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/linear_background"
    android:padding="10dp"
    tools:context=".activities.DifficultyActivity">

    <RelativeLayout
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:id="@+id/d_tool_Bar"
        android:paddingVertical="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <TextView
            android:id="@+id/d_quiz_category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/chocolate_bar_demo"
            android:paddingHorizontal="10dp"
            android:shadowColor="@color/black"
            android:shadowDx="10"
            android:shadowDy="8"
            android:layout_centerVertical="true"
            android:shadowRadius="2"
            android:text="@string/user_name"
            android:textColor="@color/white"
            android:textSize="22sp" />


        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/d_btn_profile"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            android:layout_marginHorizontal="10dp"
            app:lottie_rawRes="@raw/user"
            app:lottie_speed="0.2" />

    </RelativeLayout>


    <TextView
        android:id="@+id/d_choose_difficulty"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/d_tool_Bar"
        android:fontFamily="@font/chocolate_bar_demo"
        android:paddingHorizontal="10dp"
        android:shadowColor="@color/black"
        android:shadowDx="10"
        android:shadowDy="8"
        android:shadowRadius="2"
        android:text="@string/choose_difficulty"
        android:textColor="@color/white"
        android:textSize="22sp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/d_choose_difficulty">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/d_dif_easy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="20dp"
                android:elevation="10dp"
                app:cardCornerRadius="25dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:paddingHorizontal="20dp"
                    android:paddingVertical="10dp">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:layout_width="0dp"
                        android:layout_height="150dp"
                        android:layout_centerVertical="true"
                        android:layout_weight="1"
                        android:src="@drawable/easy" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/chocolate_bar_demo"
                        android:gravity="center"
                        android:text="@string/easy"
                        android:textColor="@color/pink"
                        android:textSize="36sp" />

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/d_dif_medium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/d_dif_easy"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="20dp"
                android:elevation="10dp"
                app:cardCornerRadius="25dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:paddingVertical="10dp"
                    android:paddingHorizontal="20dp">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:layout_width="0dp"
                        android:layout_height="150dp"
                        android:layout_centerVertical="true"
                        android:layout_weight="1"
                        android:src="@drawable/medium" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/chocolate_bar_demo"
                        android:gravity="center"
                        android:text="@string/medium"
                        android:textColor="@color/pink"
                        android:textSize="36sp" />

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/d_dif_high"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/d_dif_medium"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="20dp"
                android:elevation="10dp"
                app:cardCornerRadius="25dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:paddingVertical="10dp"
                    android:paddingHorizontal="20dp">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:layout_width="0dp"
                        android:layout_height="150dp"
                        android:layout_centerVertical="true"
                        android:layout_weight="1"
                        android:src="@drawable/hard" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/chocolate_bar_demo"
                        android:gravity="center"
                        android:text="@string/hard"
                        android:textColor="@color/pink"
                        android:textSize="36sp" />

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

        </RelativeLayout>

    </ScrollView>

</RelativeLayout>